calc/parse.output
Grammar

    0 $accept: Start $end

    1 Start: StmtList

    2 StmtList: Stmt
    3         | StmtList Stmt

    4 Stmt: ID '=' Expr ';'
    5     | Expr ';'

    6 Expr: Expr '+' Expr
    7     | Expr '*' Expr
    8     | Expr '/' Expr
    9     | Expr '-' Expr
   10     | '-' Expr
   11     | NUM
   12     | ID


Terminals, with rules where they appear

$end (0) 0
'*' (42) 7
'+' (43) 6
'-' (45) 9 10
'/' (47) 8
';' (59) 4 5
'=' (61) 4
error (256)
NUM (258) 11
ID (259) 4 12
UMINUS (260)


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
Start (13)
    on left: 1, on right: 0
StmtList (14)
    on left: 2 3, on right: 1 3
Stmt (15)
    on left: 4 5, on right: 2 3
Expr (16)
    on left: 6 7 8 9 10 11 12, on right: 4 5 6 7 8 9 10


State 0

    0 $accept: . Start $end

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    '-'  shift, and go to state 3

    Start     go to state 4
    StmtList  go to state 5
    Stmt      go to state 6
    Expr      go to state 7


State 1

   11 Expr: NUM .

    $default  reduce using rule 11 (Expr)


State 2

    4 Stmt: ID . '=' Expr ';'
   12 Expr: ID .

    '='  shift, and go to state 8

    $default  reduce using rule 12 (Expr)


State 3

   10 Expr: '-' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 10


State 4

    0 $accept: Start . $end

    $end  shift, and go to state 11


State 5

    1 Start: StmtList .
    3 StmtList: StmtList . Stmt

    NUM  shift, and go to state 1
    ID   shift, and go to state 2
    '-'  shift, and go to state 3

    $default  reduce using rule 1 (Start)

    Stmt  go to state 12
    Expr  go to state 7


State 6

    2 StmtList: Stmt .

    $default  reduce using rule 2 (StmtList)


State 7

    5 Stmt: Expr . ';'
    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ';'  shift, and go to state 17


State 8

    4 Stmt: ID '=' . Expr ';'

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 18


State 9

   12 Expr: ID .

    $default  reduce using rule 12 (Expr)


State 10

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr
   10     | '-' Expr .

    $default  reduce using rule 10 (Expr)


State 11

    0 $accept: Start $end .

    $default  accept


State 12

    3 StmtList: StmtList Stmt .

    $default  reduce using rule 3 (StmtList)


State 13

    6 Expr: Expr '+' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 19


State 14

    9 Expr: Expr '-' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 20


State 15

    7 Expr: Expr '*' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 21


State 16

    8 Expr: Expr '/' . Expr

    NUM  shift, and go to state 1
    ID   shift, and go to state 9
    '-'  shift, and go to state 3

    Expr  go to state 22


State 17

    5 Stmt: Expr ';' .

    $default  reduce using rule 5 (Stmt)


State 18

    4 Stmt: ID '=' Expr . ';'
    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '+'  shift, and go to state 13
    '-'  shift, and go to state 14
    '*'  shift, and go to state 15
    '/'  shift, and go to state 16
    ';'  shift, and go to state 23


State 19

    6 Expr: Expr . '+' Expr
    6     | Expr '+' Expr .
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 6 (Expr)


State 20

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr
    9     | Expr '-' Expr .

    '*'  shift, and go to state 15
    '/'  shift, and go to state 16

    $default  reduce using rule 9 (Expr)


State 21

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    7     | Expr '*' Expr .
    8     | Expr . '/' Expr
    9     | Expr . '-' Expr

    $default  reduce using rule 7 (Expr)


State 22

    6 Expr: Expr . '+' Expr
    7     | Expr . '*' Expr
    8     | Expr . '/' Expr
    8     | Expr '/' Expr .
    9     | Expr . '-' Expr

    $default  reduce using rule 8 (Expr)


State 23

    4 Stmt: ID '=' Expr ';' .

    $default  reduce using rule 4 (Stmt)
